# S2AND

./: .gitignore  README.md  cluster_eval.py  pyproject.toml  requirements.in  run_clustering.py  run_inference.py  setup.py  shallowNN_to_onnx.ipynb  train_classifier.py  train_lightbgm.py  train_tabnet.py
configs/: and_configuration.yaml  classifier_conf.yml  clusterer_conf.yml  inference_conf.yaml  inference_conf.yml  onnx_conf.yml  test_file_conf.yaml
data/: path_config.json
notebooks/: 1_sparse_vectors_analysis.ipynb  analyze_linkage_function.ipynb  analyze_openalexid_impact.ipynb  clusterer_behaviour.ipynb  compare_clusterers.ipynb  evaluate_results.ipynb  lightgbm_to_onnx.ipynb
s2and/extentions/: classification_models.py  clustering_models.py  clustering_objective.py  dataset_embedding.py  pipeline.py  utils.py
s2and/extentions/featurization/: base_operation.py  featurizer.py  operations.py  operations_registry.py  utils.py
s2and/utils/: configs.py  mlflow.py  onnx_converter.py  testing.py
s2and_ext/: dataset_embedding.py  my_featurization.py  my_models.py  my_utils.py
scripts/: run_and.py  run_clustering.py  run_create_test_file.py  run_inference.py  run_lightgbm2onnx.py  run_lightgbm_training.py
spark/: run_data_enrichment.py  run_doi_join.py  run_format_data.py  run_infer_vectors_service.py
src/: run_clustering.py  run_inference.py  run_lightgbm_training.py  test.py
src/s2and/: consts.py
src/s2and_ext/: clustering_models.py  clustering_objective.py  my_featurization.py  my_models.py  my_utils.py  utils.py
src/s2and_ext/featurization/: featurizer.py  utils.py
