[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s2and"
version = "0.1"
description = "Modified S2AND approach for author name disambiguation"
requires-python = ">=3.7"
dependencies = [
    "google-cloud-core==2.3.3",
    "google-cloud-storage==2.10.0",
    "numpy==1.19.2",
    "scikit-learn==0.23.2",
    "text-unidecode==1.3",
    "requests==2.24.0",
    "hyperopt==0.2.4",
    "pandas==1.1.2",
    "lightgbm==3.0.0",
    "fastcluster==1.1.26",
    "pycld2==0.41",
    "fasttext-wheel==0.9.2",
    "shap==0.36.0",
    "matplotlib==3.3.2",
    "onnx==1.10.2",
    "onnxconverter-common==1.9.0",
    "onnxmltools==1.10.0",
    "onnxruntime==1.10.0",
    "protobuf==3.20.0",
    "seaborn==0.11.0",
    "torch==1.10.0",
    "tqdm==4.49.0",
    "strsimpy==0.2.0",
    "jellyfish==0.8.2",
    "PyYAML==6.0",
    "python-Levenshtein==0.12.2",
    "mlflow==1.30.0",
    "transformers==4.11.3",
    "ipykernel==6.16.2",
    "pyspark==3.3.1",
    "jarowinkler==1.2.3",
    "graphviz==0.20.1",
]

[project.urls]
Homepage = "https://github.com/atypon/S2AND.git"

[tool.setuptools.packages.find]
include = ["s2and"]